--- a/todo/todo_item/templates/list.html
+++ b/todo/todo_item/templates/list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Главная</title>
+    <title>Список</title>
 
     <link rel="shortcut icon" type="image/png" href="imges/favicon.png"/>
     <link rel="stylesheet" href="/static/css/index.css">
@@ -40,51 +40,53 @@
 
         <div class="relationship__table-data">
             <div class="table-data__table-header">
-                <div class="table-data_table-header-item-1">TO DO List</div>
-                <a class="add_new_list" href="/create/">
-                     <div class="header__button-create-bundle">+</div>
-                </a>
-
+                <div class="table-data_table-header-item-1">День рождения</div>
+                <div class="header__button-create-bundle">+</div>
             </div>
+
             {% for row in lists %}
             <div class="table-data__table-row">
-                    <div class="table-row_table_cell-1">
-                        {% if row.is_done %}
-                            <a href="#"><li class="is_done_text">{{ row.name }}</li></a>
-                        {% else %}
-                            <a href="#"><li>{{ row.name }}</li></a>
-                        {% endif %}
-                    </div>
-                    <div class="buttons">
-                        <div class="table-data-two_table-icon">
-                            <a href='#'>
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                          d="M20 18V11H18V18H2V2H9V0H2C0.89543 0 0 0.89543 0 2V18C0 19.1046 0.89543 20 2 20H18C19.1046 20 20 19.1046 20 18ZM17.1781 0.723423C16.7197 0.26142 16.0921 0 15.4374 0C14.7834 0 14.1564 0.26083 13.6954 0.724628L5.3265 9.09342C4.57867 9.75233 4.08844 10.7328 4.00325 11.7873L4 15.0023V16.0023H8.1346C9.2689 15.9245 10.259 15.4295 10.9575 14.6238L19.279 6.30584C19.7407 5.84416 20.0001 5.21799 20.0001 4.56508C20.0001 3.91217 19.7407 3.286 19.279 2.82432L17.1781 0.723423ZM8.06398 14.0048C8.59821 13.967 9.09549 13.7184 9.49479 13.2616L15.5567 7.19972L12.8024 4.44527L6.6961 10.5496C6.29095 10.9079 6.04031 11.4092 6 11.8678V14.0029L8.06398 14.0048ZM14.2169 3.03128L16.9709 5.78551L17.8648 4.89162C17.9514 4.80502 18.0001 4.68756 18.0001 4.56508C18.0001 4.4426 17.9514 4.32514 17.8648 4.23854L15.7611 2.13486C15.6755 2.04855 15.5589 2 15.4374 2C15.3158 2 15.1992 2.04855 15.1136 2.13486L14.2169 3.03128Z"
-                                          fill="#FF4646"/>
-                                </svg>
-                            </a>
-                        </div>
-                        <a class="delete_button" href="#">
-                            <div class="table-row_table_icon">
-                                <svg width="20" height="22" viewBox="0 0 20 22" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                          d="M6.99987 0H12.9999C14.1044 0 14.9999 0.89543 14.9999 2V3H18C19.1046 3 20 3.89543 20 5V7C20 8.10457 19.1046 9 18 9H17.9196L16.9997 20C16.9997 21.1046 16.1043 22 14.9997 22H4.99974C3.89517 22 2.99974 21.1046 3.00319 20.0831L2.07961 9H2C0.895431 9 0 8.10457 0 7V5C0 3.89543 0.895431 3 2 3H4.99987V2C4.99987 0.89543 5.8953 0 6.99987 0ZM4.99987 5V4.99999H1.99987V6.99999H17.9999V4.99999H14.9999V5H4.99987ZM4.99954 20L4.08603 9H15.9127L15.003 19.917L14.9995 20H4.99954ZM13.0001 1.99999V2.99999H7.00013V1.99999H13.0001Z"
-                                          fill="#BBC1C7"/>
-                                </svg>
-                            </div>
+                <div class="table-row_table_cell-1"> {{ row.name }}</div>
+                <div class="buttons">
+                    <div class="table-data-two_table-icon">
+                        <a href='#'>
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                      d="M20 18V11H18V18H2V2H9V0H2C0.89543 0 0 0.89543 0 2V18C0 19.1046 0.89543 20 2 20H18C19.1046 20 20 19.1046 20 18ZM17.1781 0.723423C16.7197 0.26142 16.0921 0 15.4374 0C14.7834 0 14.1564 0.26083 13.6954 0.724628L5.3265 9.09342C4.57867 9.75233 4.08844 10.7328 4.00325 11.7873L4 15.0023V16.0023H8.1346C9.2689 15.9245 10.259 15.4295 10.9575 14.6238L19.279 6.30584C19.7407 5.84416 20.0001 5.21799 20.0001 4.56508C20.0001 3.91217 19.7407 3.286 19.279 2.82432L17.1781 0.723423ZM8.06398 14.0048C8.59821 13.967 9.09549 13.7184 9.49479 13.2616L15.5567 7.19972L12.8024 4.44527L6.6961 10.5496C6.29095 10.9079 6.04031 11.4092 6 11.8678V14.0029L8.06398 14.0048ZM14.2169 3.03128L16.9709 5.78551L17.8648 4.89162C17.9514 4.80502 18.0001 4.68756 18.0001 4.56508C18.0001 4.4426 17.9514 4.32514 17.8648 4.23854L15.7611 2.13486C15.6755 2.04855 15.5589 2 15.4374 2C15.3158 2 15.1992 2.04855 15.1136 2.13486L14.2169 3.03128Z"
+                                      fill="#FF4646"/>
+                            </svg>
                         </a>
                     </div>
+                    {% if row.date %}
+                        <a href="#">
+                        <div class="calendarik">{{ row.date }}</div>
+                        </a>
+                        {% else %}
+                        <div class="calendarik">
+                            <a href='#'>
+                                <img src="/static/images/calendar.png" alt="calendar" width="26px" height="24px">
+                            </a>
+                        </div>
+                    {% endif %}
+                    <div class="table-row_table_icon">
+                        <a class="delete_button" href="#">
+                            <svg width="20" height="22" viewBox="0 0 20 22" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                      d="M6.99987 0H12.9999C14.1044 0 14.9999 0.89543 14.9999 2V3H18C19.1046 3 20 3.89543 20 5V7C20 8.10457 19.1046 9 18 9H17.9196L16.9997 20C16.9997 21.1046 16.1043 22 14.9997 22H4.99974C3.89517 22 2.99974 21.1046 3.00319 20.0831L2.07961 9H2C0.895431 9 0 8.10457 0 7V5C0 3.89543 0.895431 3 2 3H4.99987V2C4.99987 0.89543 5.8953 0 6.99987 0ZM4.99987 5V4.99999H1.99987V6.99999H17.9999V4.99999H14.9999V5H4.99987ZM4.99954 20L4.08603 9H15.9127L15.003 19.917L14.9995 20H4.99954ZM13.0001 1.99999V2.99999H7.00013V1.99999H13.0001Z"
+                                      fill="#BBC1C7"/>
+                            </svg>
+                        </a>
+                     </div>
                 </div>
+            </div>
             {% endfor %}
-        {% for _ in lists|print_items %}
+         {% for _ in lists|print_items %}
              <div class="table-data__table-row">
                 <div class="table-row_table_cell-1"></div>
              </div>
         {% endfor %}
-
         </div>
     </section>
 
