view, model for todo_item is done

--- a/todo/todo_item/templates/list.html
+++ b/todo/todo_item/templates/list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
  {% block name_list %}
-    <div class="table-data_table-header-item-1">День рождения</div>
+    <div class="table-data_table-header-item-1">{{ list_name }}</div>
  {% endblock %}
 
 {% block body %}
