registration form, view and html

--- a/todo/main/templates/index.html
+++ b/todo/main/templates/index.html
@@ -15,9 +15,9 @@
     <div class="table-data__table-row">
             <div class="table-row_table_cell-1">
                 {% if row.is_done %}
-                    <a href="#"><li class="is_done_text">{{ row.name }}</li></a>
+                    <a href="{%url "todo_item:item" pk=row.id  %}"><li class="is_done_text">{{ row.name }}</li></a>
                 {% else %}
-                    <a href="#"><li>{{ row.name }}</li></a>
+                    <a href="{%url "todo_item:item" pk=row.id  %}"><li>{{ row.name }}</li></a>
                 {% endif %}
             </div>
             <div class="buttons">
