--- a/todo/registration/templates/registration.html
+++ b/todo/registration/templates/registration.html
@@ -21,18 +21,24 @@
         <div class="registration__column_right_form">
           <div class="registration__column_right_form__header">
             <div class="form__header_title_reg">Регистрация</div>
-            <div class="form__header_title_enter"><a href="/">Вход</a></div>
+            <div class="form__header_title_enter"><a href="{% url 'registration:login' %}">Вход</a></div>
           </div>
           <form class="registration_form_class" action="{% url "registration:registration" %}" id="registration_form" method="POST">
               {% csrf_token %}
             <p class="form_class_name-field"> Имя</p>
               {{ form.username }}
+              {% if form.username.errors %}
+                  {{ form.username.errors }}
+              {% endif %}
             <p class="form_class_name-field">e-mail</p>
-             {{ form.email }}
+              {{ form.email }}
             <p class="form_class_name-field"> Пароль</p>
-            {{ form.password1 }}
+              {{ form.password1 }}
             <p class="form_class_name-field">Подтверждение пароля</p>
-            {{ form.password2 }}
+              {{ form.password2 }}
+              {% if form.password2.errors %}
+                  {{ form.password2.errors }}
+              {% endif %}
           </form>
           <div class="registration__column_right__form_footer">
             <label class="form_footer_button-submit">
